--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.samblaise.tictactoe">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
@@ -19,7 +19,11 @@
         <activity android:name=".activities.GameActivity" />
         <activity android:name=".activities.ListPlayersActivity"/>
         <activity android:name=".activities.WaitingForPlayerActivity"/>
-        <service android:name=".activities.old.Service_ConnectToDB"/>
+        <service android:name=".network.Service_ConnectToDB"/><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
