--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile project(path: ':volley')
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.android.support:leanback-v17:23.4.0'
 }
